--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@ to{transform:translateX(-50%) translateY(-60px);}}
   <div class="slide" data-title="Celebração">
     <h2>Celebração</h2>
     <p>Salão de Festas Patinhos</p>
-    <a href="https://www.google.com/maps/search/?api=1&query=Patinhos,+Ladeira+dos+Caiados,+3140-106+Coimbra" target="_blank" rel="noopener">
+    <p>Carapinheira</p>
+    <a href="https://www.google.com/maps/search/Salao+de+Festas+Patinhos+Carapinheira" target="_blank" rel="noopener">
       <button class="btn">VER LOCALIZAÇÃO</button>
     </a>
   </div>
@@ -418,90 +419,77 @@ to{transform:translateX(-50%) translateY(-60px);}}
 </audio>
 
 <script>
-// Build dots
-const slides = Array.from(document.querySelectorAll('.slide'));
-const dots = document.getElementById('dots');
-slides.forEach((_,i)=>{
-  const d=document.createElement('div');
-  d.className='dot'+(i===0?' on':'');
-  dots.appendChild(d);
-});
-function setDot(i){
-  Array.from(dots.children).forEach((el,idx)=>el.classList.toggle('on', idx===i));
-}
 
-// Level 3 autoplay (no scroll): crossfade slides
+// ===== SISTEMA ESTÁVEL DE NAVEGAÇÃO =====
+document.addEventListener("DOMContentLoaded", function(){
 
-let idx = 0;
-let timer = null;
-const slides = Array.from(document.querySelectorAll('.slide'));
+  const slides = Array.from(document.querySelectorAll('.slide'));
+  const dotsContainer = document.getElementById('dots');
+  let idx = 0;
+  let timer = null;
 
-function showSlide(n){
-  slides[idx].classList.remove('active');
-  idx = n;
-  slides[idx].classList.add('active');
-  updateDots();
-}
-
-function nextSlide(){
-  let n = (idx + 1) % slides.length;
-  showSlide(n);
-}
-
-function prevSlide(){
-  let n = (idx - 1 + slides.length) % slides.length;
-  showSlide(n);
-}
-
-function startAutoplay(){
-  if(timer) clearInterval(timer);
-  timer = setInterval(nextSlide, 4000);
-}
-
-function stopAutoplay(){
-  if(timer) clearInterval(timer);
-}
-
-function manualNext(){
-  nextSlide();
-  startAutoplay();
-}
-
-function manualPrev(){
-  prevSlide();
-  startAutoplay();
-}
-
-// Swipe navigation
-let touchStartX = 0;
-
-window.addEventListener('touchstart', e => {
-  touchStartX = e.changedTouches[0].clientX;
-}, {passive:true});
-
-window.addEventListener('touchend', e => {
-  let dx = e.changedTouches[0].clientX - touchStartX;
-  if(Math.abs(dx) > 60){
-    if(dx < 0) manualNext();
-    else manualPrev();
-  }
-}, {passive:true});
-
-// Dots
-const dotsContainer = document.getElementById('dots');
-slides.forEach((_,i)=>{
-  const d=document.createElement('div');
-  d.className='dot'+(i===0?' on':'');
-  dotsContainer.appendChild(d);
-});
-
-function updateDots(){
-  Array.from(dotsContainer.children).forEach((el,i)=>{
-    el.classList.toggle('on', i===idx);
+  slides.forEach((_,i)=>{
+    const d=document.createElement('div');
+    d.className='dot'+(i===0?' on':'');
+    dotsContainer.appendChild(d);
   });
-}
 
-startAutoplay();
+  function updateDots(){
+    Array.from(dotsContainer.children).forEach((el,i)=>{
+      el.classList.toggle('on', i===idx);
+    });
+  }
+
+  function showSlide(n){
+    slides[idx].classList.remove('active');
+    idx = n;
+    slides[idx].classList.add('active');
+    updateDots();
+  }
+
+  function nextSlide(){
+    let n = (idx + 1) % slides.length;
+    showSlide(n);
+  }
+
+  function prevSlide(){
+    let n = (idx - 1 + slides.length) % slides.length;
+    showSlide(n);
+  }
+
+  function startAutoplay(){
+    if(timer) clearInterval(timer);
+    timer = setInterval(nextSlide, 4000);
+  }
+
+  // Expor funções globais para setas
+  window.manualNext = function(){
+    nextSlide();
+    startAutoplay();
+  }
+
+  window.manualPrev = function(){
+    prevSlide();
+    startAutoplay();
+  }
+
+  // Swipe
+  let touchStartX = 0;
+  window.addEventListener('touchstart', e=>{
+    touchStartX = e.changedTouches[0].clientX;
+  }, {passive:true});
+
+  window.addEventListener('touchend', e=>{
+    let dx = e.changedTouches[0].clientX - touchStartX;
+    if(Math.abs(dx) > 60){
+      if(dx < 0) window.manualNext();
+      else window.manualPrev();
+    }
+  }, {passive:true});
+
+  startAutoplay();
+
+});
 // Countdown
 const targetDate=new Date("June 6, 2026 12:00:00").getTime();
 setInterval(()=>{
