--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@ to{transform:translateX(-50%) translateY(-60px);}}
 
   <div class="slide" data-title="Celebração">
     <h2>Celebração</h2>
-    <p>Salão de Festas Patinhos</p>
+    <p>Salão de Festas</p>
+    <p><strong>Patinhos</strong></p>
     <p>Carapinheira</p>
     <a href="https://www.google.com/maps/search/Salao+de+Festas+Patinhos+Carapinheira" target="_blank" rel="noopener">
       <button class="btn">VER LOCALIZAÇÃO</button>
