--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ to{transform:translateX(-50%) translateY(-60px);}}
 
 </style>
 
-<meta property="og:title" content="Gizelene & Renato | Casamento & Batizado de Alicia">
+<meta property="og:title" content="Gizelene & Renato | Casamento & Batizado da Alicia">
 <meta property="og:description" content="06 de Junho de 2026 · Junta-te a nós neste dia especial.">
 <meta property="og:url" content="https://convite-amber.vercel.app/">
 <meta property="og:type" content="website">
