--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ to{transform:translateX(-50%) translateY(-60px);}}
   <div class="slide" data-title="Nossa História">
     <h2>Nossa História</h2>
     <p style="max-width:660px;">
-      No mesmo dia celebramos o nosso casamento e o batizado da nossa Alicia.<br>
-      Queremos muito que estejas connosco neste momento tão especial.
+      No mesmo dia em que celebramos o nosso casamento, iremos também celebrar o batismo da nossa filha, Alicia.
+Gostávamos muito de partilhar contigo este momento tão especial das nossas vidas.
     </p>
   </div>
 
