--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ to{transform:translateX(-50%) translateY(-60px);}}
   </div>
 
   <div class="slide" data-title="Nossa História">
-    <h2>Nossa História</h2>
+    <h2>A Nossa História</h2>
     <p style="max-width:660px;">
       No mesmo dia em que celebramos o nosso casamento, iremos também celebrar o batismo da nossa filha, Alicia.
 Gostávamos muito de partilhar contigo este momento tão especial das nossas vidas.
