--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ Gostávamos muito de partilhar contigo este momento tão especial das nossas vid
     <a href="https://www.google.com/maps/search/Igreja+Matriz+de+Tentugal" target="_blank" rel="noopener">
       <button class="btn">VER LOCALIZAÇÃO</button>
     </a>
-    <a href="invite.ics" download><button class="btn">ADICIONAR AO CALENDÁRIO</button></a>
+    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Cerim%C3%B3nia%20-%20Gizelene%20%26%20Renato%20%2B%20Batizado%20da%20Alicia&dates=20260606T110000Z/20260606T123000Z&details=Cerim%C3%B3nia%20do%20casamento%20e%20batizado%20da%20Alicia.&location=Igreja%20Matriz%20de%20Tent%C3%BAgal" target="_blank" rel="noopener"><button class="btn">ADICIONAR AO GOOGLE CALENDAR</button></a>
   </div>
 
   <div class="slide" data-title="Celebração">
